	  paragraph, which Pico has via ^W^W (previous paragraph)
	  and ^W^O (next paragraph).  Modifications to do_justify(),
	  new functions do_para_operation(), do_para_begin(), and
	  do_para_end().  Note that the last three functions are
	  disabled if justification is disabled. (DLR)
	- Make sure the "historylog" option isn't included at all if
	  NANO_SMALL is defined. (DLR)
	- Source reorganization: move code to src/, docs to doc/. (Jordi)
	- Translation updates (see po/ChangeLog for details).
	- Since SAMELINEWRAP is only used in nano.c, make it a static
	  variable in nano.c instead of a flag, and surround all
	  wrap_reset() calls with DISABLE_WRAPPING #ifdefs. (DLR)
	- Change enum "topmidbotnone" to "topmidnone", as there's no
	  BOTTOM option anymore. (DLR)
	- Split out the string-displaying routine from update_line()
	  into a separate function; convert the edit window, statusbar
	  display, and statusbar prompt to use it, so that they can all
	  properly display control characters and tabs; free and NULL
	  the backup search string in one place in the search code
	  instead of several; and do some other minor refactoring of
	  related display functions to simplify them.  New functions
	  mark_order() and display_string(); changes to actual_x(),
	  strnlenpt(), blank_bottombars(), blank_edit(),
	  get_page_start(), edit_add(), update_line(), statusbar(), and
	  do_replace_highlight(). (David Benbennick)  DLR: Add minor
	  cosmetic tweaks, add missing NANO_SMALL #ifdef around the text
	  for a backwards search in the refactored code, and enclose
	  dump_buffer() and dump_buffer_reverse() in one ENABLE_DEBUG
	  #ifdef instead of two.
	- Convert memmove() function calls to charmove() macro calls, as
	  the former all work on char*'s. (DLR)
	- Miscellaneous #define cleanups: only include the prototype for
	  and definition of wrap_at if wrapping and/or justification are
	  enabled, remove duplicate wrap_at prototype, and define