@@ -1,2 +1,4 @@
 Makefile
 Makefile.in
+nanorc.5.html
+nano.1.html
